# Unreal-engine-five-plug-in

./: .gitignore  LICENSE  PromptGameGenerator.uplugin  README.md
AutoSculptorAI/: README.md  __init__.py  preferences.py
AutoSculptorAI/core/: ai_client.py  mesh_generator.py  reference_analyzer.py  sculpt_engine.py  texture_engine.py
AutoSculptorAI/knowledge/: knowledge_base.py  scraper.py
AutoSculptorAI/ui/: operators.py  panels.py
AutoSculptorAI/utils/: helpers.py
Source/PromptGameGenerator/: PromptGameGenerator.Build.cs
Source/PromptGameGenerator/Private/: GameGenerator.cpp  GameLevelParser.cpp  LLMClient.cpp  PromptGameGeneratorCommands.cpp  PromptGameGeneratorModule.cpp  PropChecklist.cpp  SPromptGameGeneratorWidget.cpp  SPropChecklistWidget.cpp  WorldBuilder.cpp
Source/PromptGameGenerator/Public/: GameGenerationTypes.h  GameGenerator.h  GameLevelParser.h  LLMClient.h  PromptGameGeneratorCommands.h  PromptGameGeneratorModule.h  PropChecklist.h  SPromptGameGeneratorWidget.h  SPropChecklistWidget.h  WorldBuilder.h
backend/: Dockerfile  pyproject.toml
backend/app/: chat.py  main.py  scraper.py  studio.py  voice.py
frontend/: index.html
frontend/src/: App.jsx  index.css
frontend/src/components/: AudioPlayer.jsx  Sidebar.jsx  WaveformVisualizer.jsx
frontend/src/pages/: Chat.jsx  Dashboard.jsx  Scraper.jsx  Soundboard.jsx  Studio.jsx  VoiceGenerator.jsx
