[project]
name = "soundcraft-ai-backend"
version = "0.1.0"
description = "SoundCraft AI - Audio engineering platform with voice synthesis, soundboard, AI chat, and studio"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
    "pydub>=0.25.1",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "gtts>=2.5.0",
    "aiofiles>=23.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
